@@ -485,7 +485,9 @@ typedef enum outfile_fmt
   OUTFILE_FMT_HASH      = (1 << 0),
   OUTFILE_FMT_PLAIN     = (1 << 1),
   OUTFILE_FMT_HEXPLAIN  = (1 << 2),
-  OUTFILE_FMT_CRACKPOS  = (1 << 3)
+  OUTFILE_FMT_CRACKPOS  = (1 << 3),
+  OUTFILE_FMT_TIME_ABS  = (1 << 4),
+  OUTFILE_FMT_TIME_REL  = (1 << 5)
 
 } outfile_fmt_t;
 
@@ -1923,6 +1925,7 @@ typedef struct user_options
   char        *opencl_device_types;
   char        *outfile;
   char        *outfile_check_dir;
+  char        *outfile_format;
   char        *potfile_path;
   char        *restore_file_path;
   char       **rp_files;
@@ -1962,7 +1965,6 @@ typedef struct user_options
   u32          spin_damp;
   u32          backend_vector_width;
   u32          outfile_check_timer;
-  u32          outfile_format;
   u32          remove_timer;
   u32          restore_timer;
   u32          rp_files_cnt;
