@@ -53,7 +53,7 @@ static const char *const USAGE_BIG_PRE_HASHMODES[] =
   "     --restore-disable          |      | Do not write restore file                            |",
   "     --restore-file-path        | File | Specific path to restore file                        | --restore-file-path=x.restore",
   " -o, --outfile                  | File | Define outfile for recovered hash                    | -o outfile.txt",
-  "     --outfile-format           | Num  | Define outfile-format X for recovered hash           | --outfile-format=7",
+  "     --outfile-format           | Str  | Outfile format to use, separated with commas         | --outfile-format=1,3",
   "     --outfile-autohex-disable  |      | Disable the use of $HEX[] in output plains           |",
   "     --outfile-check-timer      | Num  | Sets seconds between outfile checks to X             | --outfile-check=30",
   "     --wordlist-autohex-disable |      | Disable the conversion of $HEX[] from the wordlist   |",
@@ -160,19 +160,10 @@ static const char *const USAGE_BIG_POST_HASHMODES[] =
   " ===+========",
   "  1 | hash[:salt]",
   "  2 | plain",
-  "  3 | hash[:salt]:plain",
-  "  4 | hex_plain",
-  "  5 | hash[:salt]:hex_plain",
-  "  6 | plain:hex_plain",
-  "  7 | hash[:salt]:plain:hex_plain",
-  "  8 | crack_pos",
-  "  9 | hash[:salt]:crack_pos",
-  " 10 | plain:crack_pos",
-  " 11 | hash[:salt]:plain:crack_pos",
-  " 12 | hex_plain:crack_pos",
-  " 13 | hash[:salt]:hex_plain:crack_pos",
-  " 14 | plain:hex_plain:crack_pos",
-  " 15 | hash[:salt]:plain:hex_plain:crack_pos",
+  "  3 | hex_plain",
+  "  4 | crack_pos",
+  "  5 | timestamp absolute",
+  "  6 | timestamp relative",
   "",
   "- [ Rule Debugging Modes ] -",
   "",
